[project]
name = "mcn-workflow"
version = "0.1.0"
description = "MCN content workflow service built with FastAPI, LangGraph, web search APIs, and video APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "langgraph>=0.2.60",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "streamlit>=1.44.0",
  "typing-extensions>=4.12.2",
  "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "services*", "workflow*"]
